Migrate InitialFlowWriterTest to JUnit5
This is a simple mockito-based test, so:
- switch to jupiter.api.Test
- use @ExtendWith(MockitoExtension) to make @Mocks initialized
- fixup mocking to match expectations
- use Mockito.timeout() to handle waiting for a single invocation

Also perform some Java 11-based cleanups.

Change-Id: I47b35489eb2c2faabbe476a0813b623c6054ff75
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>